[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yamane <candoanything1031@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
google-cloud-firestore = "^2.0.2"
mecab-python3 = "^1.0.3"
unidic-lite = "^1.0.8"
tweepy = "^3.10.0"
jaconv = "^0.3"
pykakasi = "^2.0.6"
Jinja2 = "3.0.0"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
